--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,16 +1,18 @@
-worker_processes  1;
+worker_processes 1;
 
 events {
-  worker_connections  1024;
+  worker_connections 1024;
 }
 
 http {
+  types_hash_max_size 2048;  # Increase the value as needed
+
   server {
     listen 80;
-    server_name  localhost;
+    server_name localhost;
 
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
+    root /usr/share/nginx/html;
+    index index.html index.htm;
     include /etc/nginx/mime.types;
 
     gzip on;
